hphp/hack/test/typecheck/typedefs_generics_arity3.php.exp
File "typedefs_generics_arity3.php", line 5, characters 10-10:
The type A expects 1 type parameter(s) (Typing[4101])
File "typedefs_generics_arity3.php", line 3, characters 6-6:
Definition is here
